src/test/ui/issues/issue-2XXXX/issue-23966.stderr
error[E0277]: expected a `FnMut<(_, char)>` closure, found `()`
  --> $DIR/issue-23966.rs:2:32
   |
LL |     "".chars().fold(|_, _| (), ());
   |                ----            ^^ expected an `FnMut<(_, char)>` closure, found `()`
   |                |
   |                required by a bound introduced by this call
   |
   = help: the trait `FnMut<(_, char)>` is not implemented for `()`
note: required by a bound in `fold`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(B, Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `fold`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
